[gd_scene load_steps=70 format=3 uid="uid://bii43sbgtee12"]

[ext_resource type="Script" path="res://unit_upgrade.gd" id="1_lv825"]
[ext_resource type="Script" path="res://unit/UnitResouces/UnitUpgradeStrategies/Base_Unit_Strategy.gd" id="2_hf0j4"]
[ext_resource type="PackedScene" uid="uid://bnkbulg51h351" path="res://UnitPlacement/unit_holder.tscn" id="2_pvsyo"]
[ext_resource type="PackedScene" uid="uid://bw68cv3f6dpki" path="res://Dragables/upgrade_drop_area.tscn" id="2_qshov"]
[ext_resource type="Resource" uid="uid://cgip863x0trcq" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/raven/addAttackStrategy2.tres" id="3_4ga8i"]
[ext_resource type="Script" path="res://UpgradeUI/UpgradeUI.gd" id="3_jpprc"]
[ext_resource type="Resource" uid="uid://8dipswnqxyah" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/raven/addAttackStrategy.tres" id="4_eu44o"]
[ext_resource type="Resource" uid="uid://fegh102culhx" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/hpplusStrategy.tres" id="5_7ruev"]
[ext_resource type="Resource" uid="uid://i762nxmbudps" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/mage/intplusStrategy.tres" id="6_e037r"]
[ext_resource type="Resource" uid="uid://dsoexpfy67n34" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/raven/strplusStrategy.tres" id="7_tf6vs"]
[ext_resource type="Resource" uid="uid://vibtadapnw4w" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/Bowman/addbowmanattack2.tres" id="8_lq5mi"]
[ext_resource type="Resource" uid="uid://12nk7rsqls1m" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/Bowman/addbowmanattack.tres" id="9_dye4e"]
[ext_resource type="Resource" uid="uid://dd5oaakwkfcyx" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/mage/addmagusAttack2.tres" id="10_ph728"]
[ext_resource type="Resource" uid="uid://mhsv1ven6b1b" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/mage/addmagusAttack.tres" id="11_e05lt"]
[ext_resource type="PackedScene" uid="uid://c0t63ipcmce5j" path="res://UpgradeUI/label.tscn" id="12_masci"]
[ext_resource type="PackedScene" uid="uid://cgjl24d3gg3db" path="res://UpgradeUI/Upgradebutton.tscn" id="12_tlvu3"]
[ext_resource type="Resource" uid="uid://br167hhg5wy26" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/reader/addreaderAttack2.tres" id="12_uk11x"]
[ext_resource type="Resource" uid="uid://drhm7511o3frl" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/reader/intplusStrategyReader.tres" id="13_0rj0j"]
[ext_resource type="Resource" uid="uid://cdv2yo5o4cbgd" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/reader/addReaderAttack.tres" id="13_gvwj3"]
[ext_resource type="Resource" uid="uid://c522i0g2sto8x" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/Bowman/strplusStrategybow.tres" id="15_p46ro"]
[ext_resource type="Resource" uid="uid://pkenagngkkmy" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/crusader/addHolySlash.tres" id="16_6ehgt"]
[ext_resource type="Resource" uid="uid://dnny3e83fffk6" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/crusader/addHolyWave.tres" id="17_l86nh"]
[ext_resource type="Resource" uid="uid://b7tlns2rmjeqi" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/crusader/StrStrategyCrusader.tres" id="18_g7oug"]
[ext_resource type="Resource" uid="uid://bbsevbmro32l6" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/witch/addGrenadeWitch.tres" id="19_wolto"]
[ext_resource type="Resource" uid="uid://tnnscou52fh0" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/witch/addSnakeWitch.tres" id="20_athyt"]
[ext_resource type="Resource" uid="uid://1pvnb2cmx32k" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/witch/IntincreaseWitch.tres" id="21_mrvc4"]
[ext_resource type="Resource" uid="uid://b1hg1mh4jxha3" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/Legion/Strenghtlegion.tres" id="22_0pvhp"]
[ext_resource type="Resource" uid="uid://bj76oy7844tfc" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/Legion/addLegionCharge.tres" id="23_dc4p0"]
[ext_resource type="Resource" uid="uid://mmxnp68u4a22" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/Legion/addShieldBash.tres" id="24_p3mu5"]
[ext_resource type="Resource" uid="uid://cw5x4ccci31hc" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/Dwarwen/addBeyblade.tres" id="25_vc768"]
[ext_resource type="Resource" uid="uid://cxijcuee718ho" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/Dwarwen/addTwoBash.tres" id="26_s2q3e"]
[ext_resource type="Resource" uid="uid://c1u8ucyb5wcyo" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/Dwarwen/Strenght.tres" id="27_hyf52"]
[ext_resource type="Resource" uid="uid://b1jihm3qb1it2" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/Bowman/WaterBowman/addArrowfall.tres" id="28_2cff2"]
[ext_resource type="Resource" uid="uid://b505gpfq1s2pf" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/Bowman/WaterBowman/addbowmanattack2.tres" id="29_ba7dp"]
[ext_resource type="Resource" uid="uid://dy2wkiwm7cqk8" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/Bowman/WaterBowman/addbowmanattack.tres" id="30_7r72a"]
[ext_resource type="Resource" uid="uid://bjujhg24pwcvy" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/Bowman/WaterBowman/strplusStrategybow.tres" id="31_32hdy"]
[ext_resource type="Resource" uid="uid://l8k5wxmy7do2" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/Bowman/addArrowfallnormal.tres" id="32_i1088"]
[ext_resource type="Resource" uid="uid://dhti5hyskqvxg" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/reader/addReaderBubble.tres" id="33_g75ln"]
[ext_resource type="Resource" uid="uid://mg3c0clleu4b" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/cowboy/addBadWhiskey.tres" id="34_7usus"]
[ext_resource type="Resource" uid="uid://cpn2ndcqdgif" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/cowboy/addDynamite.tres" id="35_n250w"]
[ext_resource type="Resource" uid="uid://u7mtelw0i0yl" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/cowboy/addTwoshot.tres" id="36_od5dd"]
[ext_resource type="Resource" uid="uid://cw6llxnbu8a2k" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/cowboy/addWhiskey.tres" id="37_bsstx"]
[ext_resource type="Resource" uid="uid://bei7o3ylbqp24" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/cowboy/StrStrategyCowboy.tres" id="38_uj0pq"]
[ext_resource type="Resource" uid="uid://dmdwio6nv8jrw" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/samurai/StrStrategySamurai.tres" id="39_umq5d"]
[ext_resource type="Resource" uid="uid://cxlquv4kq8or2" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/samurai/addOffensiveMeditate.tres" id="40_q8u88"]
[ext_resource type="Resource" uid="uid://5m8o47ocv0pe" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/samurai/addDefenseMeditate.tres" id="41_q0r3r"]
[ext_resource type="Resource" uid="uid://fs2i6a048ixs" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/samurai/addBowshot.tres" id="42_ecivu"]
[ext_resource type="Resource" uid="uid://dw37fqmoatmny" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/samurai/addBladestorm.tres" id="43_nqiad"]
[ext_resource type="Resource" uid="uid://crq6oji07wdu1" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/Dwarwen/addDefensiveDrink.tres" id="44_1h0x5"]
[ext_resource type="Resource" uid="uid://nhjtujdvtyu6" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/Dwarwen/addFireWine.tres" id="45_4kg7s"]
[ext_resource type="PackedScene" uid="uid://dtqkl1ipxuncx" path="res://Dragables/craft_item_drop_area.tscn" id="45_xodx2"]
[ext_resource type="Resource" uid="uid://bm1vjhwnv6mos" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/Dwarwen/addTrueDrink.tres" id="46_kwfa1"]
[ext_resource type="Resource" uid="uid://d4iorda3gxafq" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/mage/IcePrison.tres" id="47_4s10w"]
[ext_resource type="Resource" uid="uid://bbfs1w113sv2x" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/mage/massIcePrison.tres" id="48_b6gtw"]
[ext_resource type="Resource" uid="uid://grvshaciu2f2" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/raven/addDefenseBreaker.tres" id="49_bqutw"]
[ext_resource type="Texture2D" uid="uid://c1glqkhh4kdpi" path="res://assets/characters/items/potionitem-sprite.png" id="50_iugcd"]
[ext_resource type="Resource" uid="uid://bn3jtkgcmj750" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/raven/addLifeSteal.tres" id="50_yjhqg"]
[ext_resource type="Resource" uid="uid://b10xiu771gnl0" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/reader/addMassBubble.tres" id="51_l4ppu"]
[ext_resource type="Resource" uid="uid://57yw4idueego" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/reader/addSmite.tres" id="52_ce1ol"]
[ext_resource type="Resource" uid="uid://cba3cye5rslr0" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/witch/addRayofKill.tres" id="53_8cbdt"]
[ext_resource type="Resource" uid="uid://xxbjbninvkh" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/crusader/addHolyHeal.tres" id="54_6kytx"]
[ext_resource type="Resource" uid="uid://dnc7gqy5ansm" path="res://unit/UnitResouces/UnitUpgradeStrategies/StrategyResources/crusader/addMassBubble.tres" id="55_0y1xm"]

[sub_resource type="Animation" id="Animation_rnsf2"]
resource_name = "craft_item_slidein"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer3:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(684, 596), Vector2(670, 61)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer3:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_so3bn"]
resource_name = "craft_item_slideout"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer3:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(670, 61), Vector2(684, 596)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer3:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_xtjo5"]
resource_name = "main_menu_slidein"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer4:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(45, -537), Vector2(59, 35)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer4:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ovtmm"]
resource_name = "main_menu_slideout"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer4:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(59, 35), Vector2(45, -537)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer4:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_o6we6"]
resource_name = "upgrade_slidein"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1151, 1), Vector2(596, -2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-334, 2), Vector2(3, -1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PanelContainer2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(7.45058e-09, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_rvv4f"]
resource_name = "upgrade_slideout"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(596, -2), Vector2(1151, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0333333, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(3, -1), Vector2(-334, 2)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PanelContainer2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.0333333, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_31ot1"]
_data = {
"craft_item_slidein": SubResource("Animation_rnsf2"),
"craft_item_slideout": SubResource("Animation_so3bn"),
"main_menu_slidein": SubResource("Animation_xtjo5"),
"main_menu_slideout": SubResource("Animation_ovtmm"),
"upgrade_slidein": SubResource("Animation_o6we6"),
"upgrade_slideout": SubResource("Animation_rvv4f")
}

[node name="UnitUpgradeScreen" type="Node2D" node_paths=PackedStringArray("upgradeUI", "unitHolder") groups=["UnitUpgrader"]]
script = ExtResource("1_lv825")
upgradeUI = NodePath("CanvasLayer")
unitHolder = NodePath("UnitHolder")
possibleUpgrades = Array[ExtResource("2_hf0j4")]([ExtResource("3_4ga8i"), ExtResource("4_eu44o"), ExtResource("8_lq5mi"), ExtResource("9_dye4e"), ExtResource("10_ph728"), ExtResource("11_e05lt"), ExtResource("12_uk11x"), ExtResource("13_gvwj3"), ExtResource("5_7ruev"), ExtResource("6_e037r"), ExtResource("13_0rj0j"), ExtResource("7_tf6vs"), ExtResource("15_p46ro"), ExtResource("16_6ehgt"), ExtResource("17_l86nh"), ExtResource("18_g7oug"), ExtResource("19_wolto"), ExtResource("20_athyt"), ExtResource("21_mrvc4"), ExtResource("22_0pvhp"), ExtResource("23_dc4p0"), ExtResource("24_p3mu5"), ExtResource("25_vc768"), ExtResource("26_s2q3e"), ExtResource("27_hyf52"), ExtResource("28_2cff2"), ExtResource("29_ba7dp"), ExtResource("30_7r72a"), ExtResource("31_32hdy"), ExtResource("32_i1088"), ExtResource("33_g75ln"), ExtResource("34_7usus"), ExtResource("35_n250w"), ExtResource("36_od5dd"), ExtResource("37_bsstx"), ExtResource("38_uj0pq"), ExtResource("39_umq5d"), ExtResource("39_umq5d"), ExtResource("40_q8u88"), ExtResource("41_q0r3r"), ExtResource("42_ecivu"), ExtResource("43_nqiad"), ExtResource("44_1h0x5"), ExtResource("45_4kg7s"), ExtResource("46_kwfa1"), ExtResource("47_4s10w"), ExtResource("48_b6gtw"), ExtResource("49_bqutw"), ExtResource("50_yjhqg"), ExtResource("51_l4ppu"), ExtResource("52_ce1ol"), ExtResource("53_8cbdt"), ExtResource("54_6kytx"), ExtResource("55_0y1xm")])

[node name="UnitHolder" parent="." instance=ExtResource("2_pvsyo")]

[node name="Marker2D" type="Marker2D" parent="UnitHolder"]
position = Vector2(96, 77)

[node name="Marker2D2" type="Marker2D" parent="UnitHolder"]
position = Vector2(161, 75)

[node name="Marker2D3" type="Marker2D" parent="UnitHolder"]
position = Vector2(223, 78)

[node name="Marker2D4" type="Marker2D" parent="UnitHolder"]
position = Vector2(294, 80)

[node name="Marker2D5" type="Marker2D" parent="UnitHolder"]
position = Vector2(348, 79)

[node name="Marker2D6" type="Marker2D" parent="UnitHolder"]
position = Vector2(406, 82)

[node name="Marker2D7" type="Marker2D" parent="UnitHolder"]
position = Vector2(458, 79)

[node name="Marker2D8" type="Marker2D" parent="UnitHolder"]
position = Vector2(346, 168)

[node name="Marker2D9" type="Marker2D" parent="UnitHolder"]
position = Vector2(405, 166)

[node name="Marker2D10" type="Marker2D" parent="UnitHolder"]
position = Vector2(95, 168)

[node name="Marker2D11" type="Marker2D" parent="UnitHolder"]
position = Vector2(159, 166)

[node name="Marker2D12" type="Marker2D" parent="UnitHolder"]
position = Vector2(221, 168)

[node name="Marker2D13" type="Marker2D" parent="UnitHolder"]
position = Vector2(293, 167)

[node name="CraftItemDropArea" parent="." instance=ExtResource("45_xodx2")]
unique_name_in_owner = true
visible = false
position = Vector2(404, 271)

[node name="UpgradeDropArea" parent="." instance=ExtResource("2_qshov")]
unique_name_in_owner = true
visible = false
position = Vector2(404, 309)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(524, 287)
zoom = Vector2(1.2, 1.2)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("3_jpprc")
upgradeButtonScene = ExtResource("12_tlvu3")
labelScene = ExtResource("12_masci")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
libraries = {
"": SubResource("AnimationLibrary_31ot1")
}

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -323.0
offset_right = 301.0
offset_bottom = 327.0
grow_horizontal = 0
grow_vertical = 2
size_flags_stretch_ratio = 0.0

[node name="upgrades" type="VBoxContainer" parent="CanvasLayer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1486.0
offset_top = -322.0
offset_right = -1158.0
offset_bottom = 197.0
grow_horizontal = 0
grow_vertical = 2
size_flags_stretch_ratio = 0.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/PanelContainer2/VBoxContainer"]
layout_mode = 2
text = "Unit Info"

[node name="stats" type="VBoxContainer" parent="CanvasLayer/PanelContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/PanelContainer2/VBoxContainer/stats"]
layout_mode = 2
text = "Stats"

[node name="attacks" type="VBoxContainer" parent="CanvasLayer/PanelContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/PanelContainer2/VBoxContainer/attacks"]
layout_mode = 2
text = "Attacks"

[node name="PanelContainer3" type="PanelContainer" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
anchors_preset = -1
anchor_left = 0.582
anchor_top = 0.094
anchor_right = 0.818
anchor_bottom = 0.73
offset_left = 13.536
offset_top = 535.088
offset_right = 13.664
offset_bottom = 534.96

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="itemTexture" type="TextureRect" parent="CanvasLayer/PanelContainer3/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("50_iugcd")
expand_mode = 4
stretch_mode = 3

[node name="itemlabel" type="Label" parent="CanvasLayer/PanelContainer3/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Potion of health"

[node name="craftButton" type="Button" parent="CanvasLayer/PanelContainer3/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Craft"

[node name="PanelContainer4" type="PanelContainer" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
anchors_preset = -1
anchor_left = 0.051
anchor_top = 0.054
anchor_right = 0.859
anchor_bottom = 0.836
offset_left = -13.752
offset_top = -571.992
offset_right = -13.5681
offset_bottom = -571.728

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PanelContainer4"]
layout_mode = 2
size_flags_horizontal = 4

[node name="rest" type="Button" parent="CanvasLayer/PanelContainer4/HBoxContainer"]
layout_mode = 2
text = "Rest
Next Party Level-up +1"

[node name="upgrade" type="Button" parent="CanvasLayer/PanelContainer4/HBoxContainer"]
layout_mode = 2
text = "Upgrade
Give additional upgrade
to a single unit"

[node name="craft" type="Button" parent="CanvasLayer/PanelContainer4/HBoxContainer"]
layout_mode = 2
text = "Craft
Let a unit craft an Item"

[connection signal="UnitTaken" from="CraftItemDropArea" to="." method="_on_craft_item_drop_area_unit_taken"]
[connection signal="unitDataCounted" from="CraftItemDropArea" to="." method="_on_craft_item_drop_area_unit_data_counted"]
[connection signal="UnitTaken" from="UpgradeDropArea" to="." method="_on_upgrade_drop_area_unit_taken"]
[connection signal="unitDataCounted" from="UpgradeDropArea" to="." method="_on_upgrade_drop_area_unit_data_counted"]
[connection signal="ItemCrafted" from="CanvasLayer" to="." method="_on_canvas_layer_item_crafted"]
[connection signal="UpgradePassed" from="CanvasLayer" to="." method="_on_canvas_layer_upgrade_passed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer3/VBoxContainer/craftButton" to="CanvasLayer" method="_on_craft_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer4/HBoxContainer/rest" to="." method="_on_rest_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer4/HBoxContainer/upgrade" to="." method="_on_upgrade_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer4/HBoxContainer/craft" to="." method="_on_craft_pressed"]
